# hawk-backtester

./: .envrc  .gitignore  BACKTESTER.md  Cargo.toml  ES_BT.csv  README.md  backtest_metrics.csv  backtest_results.csv  flake.nix  pyproject.toml  test.ipynb  test_backtester.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 388k7zzj1b4f3i0pvfasrngbwsxqgl6w-source  hr5iv3zmp6ah7hh7m5m5phld7zf7791q-source
.github/workflows/: python-publish.yml  release.yml
python/: example.py
python/hawk_backtester/: __init__.py
src/: README.md  backtester.rs  input_handler.rs  lazy.rs  lib.rs  main.rs  metrics.rs  mod.rs  old.rs
src/tests/: README.md  backtester_test.rs  input_handler_test.rs  metrics_test.rs  mod.rs
tests/: test_basic.py  test_portfolio.py
tests/data/: example_insights.parquet
